# modelctx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPREHENSIVE_FIXES.md  CONTRIBUTING.md  INSTALL.sh  LICENSE  OVERVIEW.md  PROJECT_DEVELOPMENT_PLAN.md  QUICK_START.md  README.md  SECURITY.md  SETUP.md  debug_cli.py  debug_project_creation.py  install.bat  install.ps1  install_dependencies.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md
modelctx/: cli.py
modelctx/backends/: base.py  cloudstorage.py  database.py  email.py  filesystem.py
modelctx/core/: generator.py
modelctx/templates/api/: .env.jinja2
modelctx/templates/cloudstorage/: .env.jinja2
modelctx/templates/database/: .env.jinja2
modelctx/templates/email/: .env.jinja2
modelctx/templates/filesystem/: .env.jinja2
modelctx/templates/webscraper/: .env.jinja2
tests/: __init__.py  test_code_generation.py
