[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcontextkit"
version = "0.1.0"
description = "A comprehensive CLI tool for creating and configuring Model Context Protocol (MCP) servers"
authors = [
    {name = "MCP Setup Tool Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mcp", "model-context-protocol", "ai", "claude", "cli", "modelcontextkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
database = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "sqlalchemy>=2.0.0",
]
api = [
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
]
filesystem = [
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
]
webscraper = [
    "beautifulsoup4>=4.12.0",
    "selenium>=4.0.0",
    "playwright>=1.30.0",
    "requests>=2.28.0",
]
email = [
    "aiosmtplib>=2.0.0",
    "imapclient>=2.3.0",
]
cloudstorage = [
    "boto3>=1.26.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "modelcontextkit[database,api,filesystem,webscraper,email,cloudstorage]"
]

[project.scripts]
modelctx = "modelctx.cli:main"

[project.urls]
Homepage = "https://github.com/ModelContextKit/modelctx"
Documentation = "https://github.com/ModelContextKit/modelctx/wiki"
Repository = "https://github.com/ModelContextKit/modelctx"
"Bug Tracker" = "https://github.com/ModelContextKit/modelctx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelctx*"]

[tool.setuptools.package-data]
modelctx = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"