[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcontextkit"
version = "0.1.2"
description = "A comprehensive CLI tool for rapidly creating, configuring, and deploying Model Context Protocol (MCP) servers"
readme = "README.md"
authors = [
    {name = "Ersin Koç", email = "ersinkoc@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: Servers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["mcp", "model-context-protocol", "cli", "server", "development", "code-generation", "anthropic", "claude"]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://modelcontextkit.com"
Repository = "https://github.com/ModelContextKit/modelctx"
Documentation = "https://github.com/ModelContextKit/modelctx/wiki"
"Bug Tracker" = "https://github.com/ModelContextKit/modelctx/issues"
Website = "https://modelcontextkit.com"
Changelog = "https://github.com/ModelContextKit/modelctx/blob/main/CHANGELOG.md"

[project.scripts]
modelctx = "modelctx.cli:main"
mck = "modelctx.cli:main"

[tool.setuptools.packages.find]
include = ["modelctx*"]

[project.optional-dependencies]
database = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "aiosqlite>=0.19.0",
]
api = [
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "python-jose>=3.3.0",
]
filesystem = [
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "pathspec>=0.11.0",
    "python-magic>=0.4.27",
]
webscraper = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "selenium>=4.0.0",
    "playwright>=1.30.0",
    "lxml>=4.9.0",
    "urllib3>=1.26.0",
    "aiohttp>=3.8.0",
]
email = [
    "aiosmtplib>=2.0.0",
    "imapclient>=2.3.0",
    "email-validator>=2.0.0",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.27",
]
cloudstorage = [
    "boto3>=1.26.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.27",
]
all = [
    "sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0", "pymysql>=1.0.0", "aiosqlite>=0.19.0",
    "httpx>=0.24.0", "aiohttp>=3.8.0", "python-jose>=3.3.0",
    "aiofiles>=23.0.0", "watchdog>=3.0.0", "pathspec>=0.11.0", "python-magic>=0.4.27",
    "beautifulsoup4>=4.12.0", "requests>=2.28.0", "selenium>=4.0.0", "playwright>=1.30.0", "lxml>=4.9.0", "urllib3>=1.26.0",
    "aiosmtplib>=2.0.0", "imapclient>=2.3.0", "email-validator>=2.0.0",
    "boto3>=1.26.0", "google-cloud-storage>=2.10.0", "azure-storage-blob>=12.17.0",
]
dev = [
    "pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "pytest-mock>=3.10.0",
    "black>=23.0.0", "isort>=5.12.0", "flake8>=6.0.0", "mypy>=1.0.0",
    "pre-commit>=3.0.0", "twine>=4.0.0", "build>=0.10.0",
]

[tool.setuptools.packages.find]
include = ["modelctx*"]

[tool.setuptools.package-data]
modelctx = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | test_generation
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["modelctx"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
